[gd_scene load_steps=7 format=2]

[ext_resource path="res://shop/shop.gd" type="Script" id=1]
[ext_resource path="res://shop/img/work station.png" type="Texture" id=2]
[ext_resource path="res://shop/img/house.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 22.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 10.5 )

[node name="shop" type="Node2D"]
script = ExtResource( 1 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
unique_name_in_owner = true
position = Vector2( 0, -13 )
frames = SubResource( 1 )

[node name="static_body_2d" type="StaticBody2D" parent="."]
collision_layer = 0

[node name="collision_shape_2d" type="CollisionShape2D" parent="static_body_2d"]
position = Vector2( 0, -1 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="player_area_mask" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="collision_shape_2d" type="CollisionShape2D" parent="player_area_mask"]
position = Vector2( 0, -8.5 )
shape = SubResource( 2 )

[connection signal="area_entered" from="player_area_mask" to="." method="_on_player_area_mask_area_entered"]
[connection signal="area_exited" from="player_area_mask" to="." method="_on_player_area_mask_area_exited"]
[connection signal="input_event" from="player_area_mask" to="." method="_on_player_area_mask_input_event"]
[connection signal="mouse_entered" from="player_area_mask" to="." method="_on_player_area_mask_mouse_entered"]
[connection signal="mouse_exited" from="player_area_mask" to="." method="_on_player_area_mask_mouse_exited"]
